<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundImage"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="?android:attr/textColorLink"
    tools:context="com.example.mickymouse.calculate.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button4"
        android:text="@string/_1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button1"
        android:text="@string/_2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button5"
        android:text="@string/_3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button6"
        android:text="@string/_4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button10"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/_5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_toEndOf="@+id/button5"
        android:text="@string/_6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_above="@+id/button5"
        android:layout_alignStart="@+id/button4"
        android:text="@string/_7"
        android:visibility="visible" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button7"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@+id/button4"
        android:text="@string/_8" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button5"
        android:text="@string/_9" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:layout_alignEnd="@+id/Output"
        android:layout_alignParentBottom="true"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignStart="@+id/button10"
        android:text="@string/dot"

        />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAdd"
        android:layout_alignStart="@+id/btnAdd"
        android:text="@string/Clear"
        />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignStart="@+id/button7"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button8"
        android:layout_toEndOf="@+id/btnAdd"
        android:text="@string/sub"
        />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button9"
        android:layout_toEndOf="@+id/button8"
        android:text="@string/equals"
        />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnDot"
        android:layout_alignTop="@+id/btnEqual"
        android:text="@string/div"
        />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSub"
        android:layout_toEndOf="@+id/btnClear"
        android:text="@string/sin"
        />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnSin"
        android:layout_toEndOf="@+id/btnSub"
        android:text="@string/tan" />

    <Button
        android:id="@+id/btnmult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button10"
        android:layout_alignTop="@+id/btnClear"
        android:text="@string/mult" />

    <TextView
        android:id="@+id/Entry"
        android:layout_width="380dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom|end"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Output"
        android:layout_width="378dp"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom|end"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="70sp"
        android:textStyle="bold" />

</RelativeLayout>
